<resources>
    <string name="app_name">Where Am I?</string>
    <string name="app_heading">Where Am I?</string>
    <string name="app_description">Instantly find your current coordinates and address.</string>
    <string name="status_initial">Ready to locate</string>

    <string name="label_current_location">CURRENT LOCATION</string>
    <string name="location_initial_message">Tap below to find your location</string>
    <string name="location_not_available">Location unavailable</string>

    <string name="label_location_details">LOCATION DETAILS</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_accuracy">Accuracy</string>
    <string name="label_timestamp">Time</string>

    <string name="label_latitude_short">Lat</string>
    <string name="label_longitude_short">Lng</string>

    <string name="btn_get_location">Get My Location</string>
    <string name="status_retrieving">Finding your location…</string>
    <string name="status_success">Location found successfully</string>
    <string name="status_permission_denied">Location permission required</string>
    <string name="permission_rationale">Location access is needed to show where you are.</string>
    <string name="status_location_services_disabled">Location services disabled</string>
    <string name="status_error">Location unavailable</string>

    <string name="label_latitude_value">%1$s°</string>
    <string name="label_longitude_value">%1$s°</string>
    <string name="label_accuracy_value">±%1$s</string>
    <string name="label_timestamp_value">%1$s</string>
    <string name="value_placeholder">--</string>

    <string name="content_desc_location_icon">Location Icon</string>
    <string name="content_desc_accuracy_icon">Accuracy Icon</string>
    <string name="content_desc_time_icon">Time Icon</string>

    <!-- Advanced Permission Dialogs -->
    <string name="permission_rationale_title">Location Access Needed</string>
    <string name="permission_rationale_message">This app needs location access to show your current coordinates. Precise location is preferred, but approximate location works too.</string>
    <string name="permission_settings_title">Permission Required</string>
    <string name="permission_settings_message">Location permission has been permanently denied. Please enable it in the App Settings to use this feature.</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>

    <!-- GPS/System Settings -->
    <string name="gps_disabled_title">Location Services Off</string>
    <string name="gps_disabled_message">Your device\'s location services (GPS) are turned off. Please enable them in system settings to continue.</string>
    <string name="btn_enable_gps">Enable GPS</string>
</resources>
